--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:supportsRtl="true"
-        android:theme="@style/SplashTheme">
+        android:theme="@style/SplashTheme"
+        >
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
