custom tabs added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,14 @@
             </intent-filter>
         </activity>
 
+
+        <activity
+            android:name=".WebviewActivity"
+            android:label="Webview"
+            >
+
+        </activity>
+
     </application>
 
 </manifest>
