--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.oslofjorden'
         minSdkVersion 16
         targetSdkVersion 23
-        versionName '1'
-        versionCode 11
+        versionName '1.03'
+        versionCode 14
 
     }
     buildTypes {
@@ -32,7 +32,7 @@ dependencies {
     //compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4.+'
+    compile 'com.google.maps.android:android-maps-utils:0.4'
     compile 'com.android.support:support-v4:23.1.1'
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
