--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:largeHeap="true"
-        android:screenOrientation="nosensor"
+        android:screenOrientation="portrait"
+
         >
 
         <!--
@@ -32,6 +33,8 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:screenOrientation="portrait"
+
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             >
