--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.maps.android:android-maps-utils:0.4'
     compile 'com.android.support:support-v4:23.3.0'
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
-    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:appcompat-v7:23.3.0"
+    compile "com.android.support:design:23.3.0"
     compile "com.android.support:customtabs:23.3.0"
 }
