--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'com.oslofjorden'
         minSdkVersion 16
         targetSdkVersion 23
-        versionName '1.1.13'
-        versionCode 36
+        versionName '1.1.14'
+        versionCode 37
 
     }
     buildTypes {
@@ -32,9 +32,10 @@ dependencies {
     //compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
-    compile 'com.google.maps.android:android-maps-utils:0.4'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
     compile 'com.android.support:support-v4:23.3.0'
     compile "com.android.support:appcompat-v7:23.3.0"
     compile "com.android.support:design:23.3.0"
     compile "com.android.support:customtabs:23.3.0"
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
