finish extracting data from polylines

--- a/binarygenerator/build.gradle
+++ b/binarygenerator/build.gradle
@@ -1,11 +1,16 @@
-apply plugin: 'java-library'
 apply plugin: 'kotlin'
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile group: 'org.json', name: 'json', version: '20180130'
+    implementation group: 'org.json', name: 'json', version: '20180130'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 sourceCompatibility = "1.7"
@@ -13,6 +18,7 @@ targetCompatibility = "1.7"
 buildscript {
     ext.kotlin_version = '1.2.41'
     repositories {
+        google()
         mavenCentral()
     }
     dependencies {
@@ -23,6 +29,7 @@ buildscript {
 }
 repositories {
     mavenCentral()
+    google()
 }
 compileKotlin {
     kotlinOptions {
