--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
@@ -30,18 +34,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
 
-
-
-
-
     implementation 'com.google.android.gms:play-services-location:15.0.0'
     implementation 'com.google.android.gms:play-services-maps:15.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation "com.android.support:design:27.1.1"
-
-
-
-
 
 
     testImplementation 'junit:junit:4.12'
