setup fastlane and supply

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,14 @@ def vcode = (int) (((new Date().getTime() / 1000) - 1451606400) / 10)
 
 
 android {
+    signingConfigs {
+        signingConfig {
+            keyAlias 'oslofjordenkeystore'
+            keyPassword 'key45!-osloapp'
+            storeFile file('/Users/mariuskohmann/Code/Personal/OslofjordenTurguideDocuments/keystore.jks')
+            storePassword 'key45!-osloapp'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.oslofjorden"
@@ -22,6 +30,7 @@ android {
         versionCode vcode
         versionName "2.0." + vcode
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.signingConfig
     }
     buildTypes {
         release {
@@ -36,20 +45,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:customtabs:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-
-
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.billingclient:billing:1.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
-    implementation "com.android.support:design:27.1.1"
-
-
+    implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
