--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.vending.BILLING" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon"
@@ -21,6 +22,9 @@
         android:theme="@style/AppTheme"
 
         >
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
