--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
