--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,13 @@ android {
     dataBinding {
         enabled = true
     }
+
+
+    lintOptions {
+        baseline file("lint-baseline.xml")
+        warningsAsErrors true
+        abortOnError true
+    }
 }
 
 dependencies {
