--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: android
+android:
+  components:
+  - tools
+  - build-tools-28.0.3
+  - platform-tools
+  - android-28
+  - add-on
+  - extra
 script:
   - ./gradlew lint
