--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script:
   - ./gradlew lint
 
 notifications:
-  slack: oslofjordencom:vImW8YpFDd6QNAO1lu9vW5WZ
+  slack: oslofjordencom:vImW8YpFDd6QNAO1lu9vW5WZ#android-ci
     on_success: always
     on_failure: always
