--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,16 @@ allprojects {
     }
 }
 
+configurations {
+    ktlint
+}
+
 repositories {
     mavenCentral()
 }
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    ktlint "com.github.shyiko:ktlint:0.30.0"
 }
 compileKotlin {
     kotlinOptions {
@@ -38,4 +43,22 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+
+
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "app/src/**/*.kt", "binaryFileGenerator/src/**/*.kt"
+    // to generate report in checkstyle format prepend following args:
+    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
+    // see https://github.com/shyiko/ktlint#usage for more
+}
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "-F", "app/src/**/*.kt", "binaryFileGenerator/src/**/*.kt"
 }
