--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ android:
   - android-28
   - add-on
   - extra
+  - extra-google-google_play_services
+  - extra-android-m2repository
+  - extra-google-m2repository
 script:
   - ./gradlew ktlint dependencies lint
-
 
 notifications:
   slack: oslofjordencom:vImW8YpFDd6QNAO1lu9vW5WZ#android-ci
