--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
+
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.11"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,10 +23,15 @@ allprojects {
     }
 }
 
+configurations {
+    ktlint
+}
+
 repositories {
     mavenCentral()
 }
 dependencies {
+    ktlint "com.github.shyiko:ktlint:0.30.0"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11"
 }
 compileKotlin {
@@ -37,4 +43,22 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+
+
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "app/src/**/*.kt", "binaryFileGenerator/src/**/*.kt"
+    // to generate report in checkstyle format prepend following args:
+    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
+    // see https://github.com/shyiko/ktlint#usage for more
+}
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "-F", "app/src/**/*.kt", "binaryFileGenerator/src/**/*.kt"
 }
