--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
+    implementation 'org.jsoup:jsoup:1.8.1'
 
     implementation 'org.jetbrains.anko:anko-common:0.10.8'
     implementation 'org.jetbrains.anko:anko-design:0.10.8'
