--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,10 @@ android {
         applicationId "com.oslofjorden"
         minSdkVersion 15
         targetSdkVersion 28
-        versionName "2.0." + vcode
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionCode vcode
+        versionName "2.1." + vcode
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.signingConfig
     }
     buildTypes {
