--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".oslofjordenturguide.usecase.broweMap.MapsActivity"
+            android:name=".oslofjordenturguide.usecase.browseMap.MapsActivity"
 
             android:label="@string/title_activity_maps"
             android:screenOrientation="portrait">
