--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 28
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        versionCode vcode
+        versionCode 40
         versionName "2.1." + vcode
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.signingConfig
