--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 /**
  * Use the number of seconds/10 since Jan 1 2016 as the versionCode.
  * This lets us upload a new build at most every 10 seconds for the
@@ -29,7 +31,6 @@ android {
         applicationId "com.oslofjorden"
         minSdkVersion 15
         targetSdkVersion 28
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         versionCode vcode
         versionName "2.1." + getDate()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -60,36 +61,29 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha03'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'android.arch.lifecycle:extensions:'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
-
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'org.jsoup:jsoup:1.8.1'
-
     implementation 'org.jetbrains.anko:anko-common:0.10.8'
     implementation 'org.jetbrains.anko:anko-design:0.10.8'
-    // For SnackBars
-
-
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
     implementation 'com.android.billingclient:billing:1.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.android.gms:play-services-ads:17.2.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-runtime:2.0.0"
+
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
     testImplementation 'junit:junit:4.12'
-    implementation 'com.google.android.gms:play-services-ads:17.1.3'
+    testImplementation "androidx.arch.core:core-testing:2.0.1"
 
-    def lifecycle_version = '2.0.0-beta01'
-
-    // ViewModel and LiveData
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-    testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.0.0"
 }
