demo of how a menu would work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
         applicationId "com.oslofjorden"
         minSdkVersion 15
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode vcode
         versionName "2.1." + getDate()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -74,8 +75,15 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.google.android.gms:play-services-ads:17.2.1'
 
+    def nav_version = "2.1.0-alpha04"
+
+    implementation "androidx.navigation:navigation-fragment:$nav_version" // For Kotlin use navigation-fragment-ktx
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 
     testImplementation 'junit:junit:4.12'
     testImplementation "androidx.arch.core:core-testing:2.0.1"
