--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0-beta01'
+        classpath 'com.android.tools.build:gradle:3.5.0-beta03'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.11"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // There is a problem with google-services 4.2.0 so that the build will not success.
+        // Upgrade this dependency when a fix is available.
+        classpath 'com.google.gms:google-services:4.1.0'
     }
 }
 apply plugin: 'kotlin'
@@ -32,7 +32,7 @@ repositories {
 }
 dependencies {
     ktlint "com.github.shyiko:ktlint:0.30.0"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.31"
 }
 compileKotlin {
     kotlinOptions {
